# myWebCppServer_edu

./: CMakeLists.txt  MyFilePicker.cpp  MyFilePicker.h  MyHttp.cpp  MyHttp.h  MyServer.cpp  MyServer.h  MyWorker.cpp  MyWorker.h  README.md  main.cpp  myExeptions.h  whenServerOnline.cpp  whenServerOnline.h
files/: script.js  scrupt.js  style.css
pageClasses/: FirstPage.cpp  FirstPage.h  Page.cpp  Page.h
pages/: index.html  index2.html
